<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetailActivity">

    <EditText
        android:id="@+id/etID"
        android:autofillHints="ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/id"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etName"
        android:inputType="text"
        android:autofillHints="name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="32dp"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@+id/etID"
        tools:layout_editor_absoluteX="61dp" />

    <EditText
        android:id="@+id/etEmail"
        android:autofillHints="emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="32dp"
        android:hint="@string/email"
        android:inputType="textEmailSubject"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        tools:layout_editor_absoluteX="15dp" />

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" >

    <RadioButton
        android:id="@+id/rbFemale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/female"
        app:layout_constraintTop_toBottomOf="@+id/rgGender" />

    <RadioButton
        android:id="@+id/rbMale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/male"
        app:layout_constraintTop_toBottomOf="@+id/rbFemale" />

    <RadioButton
        android:id="@+id/rbOther"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other"
        app:layout_constraintTop_toBottomOf="@+id/rbMale" />
</RadioGroup>

    <RadioGroup
        android:id="@+id/rgStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@+id/rgGender">

        <RadioButton
            android:id="@+id/rbStatusActive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/active" />

        <RadioButton
            android:id="@+id/rbStatusInactive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inactive" />
    </RadioGroup>


    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#4FAEA4"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@+id/rgStatus"
        tools:layout_editor_absoluteX="15dp" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#B14343"
        android:text="@string/delete"
        app:layout_constraintTop_toBottomOf="@+id/buttonSave"
        tools:layout_editor_absoluteX="15dp" />

</androidx.constraintlayout.widget.ConstraintLayout>